[package]
name = "midnight_motorist"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["mp3", "wav"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy-inspector-egui = "*"
bevy_screen_diagnostics = "*"
rand = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
